--- a/package/index.html
+++ b/package/index.html
@@ -98,7 +98,7 @@ var saveAs=saveAs||navigator.msSaveBlob&&navigator.msSaveBlob.bind(navigator)||f
 		<div id="init-lacking">Your browser lacks required capabilities. Please upgrade it or switch to another to continue.</div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<!-- UUID://D56A0595-E867-4566-8F20-6CE8C6492E58// --><tw-storydata name="LackCondolence" startnode="5" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="D56A0595-E867-4566-8F20-6CE8C6492E58" zoom="1" format="SugarCube" format-version="2.33.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.say p:last-of-type {
+	<!-- UUID://D56A0595-E867-4566-8F20-6CE8C6492E58// --><tw-storydata name="LackCondolence" startnode="2" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="D56A0595-E867-4566-8F20-6CE8C6492E58" zoom="1" format="SugarCube" format-version="2.33.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.say p:last-of-type {
     padding: 0.5em 0;
     margin: 0;
     float: left;
@@ -788,19 +788,87 @@ macros.cyclinglink = {
                 this.setAttribute("data-cycle", u)
             }
     }
-};</script><tw-passagedata pid="1" name="Start" tags="" position="100,100" size="100,100">&lt;!--刷新功能--&gt;
-  &lt;&lt;widget &quot;refresh&quot;&gt;&gt;&lt;&lt;silently&gt;&gt;\	/*初始化*/
+};</script><tw-passagedata pid="1" name="Templates" tags="" position="100,100" size="100,100">&lt;!--海盗--&gt;
+&lt;&lt;script&gt;&gt;
+Template.add(&#39;pirate&#39;, function () {
+  return &quot;Hello, me hardy!&quot;;
+});
+&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Start" tags="" position="225,100" size="100,100">&lt;!--刷新功能--&gt;
+&lt;&lt;widget &quot;refresh&quot;&gt;&gt;&lt;&lt;silently&gt;&gt;
+	/*初始化*/
 	&lt;&lt;if $manIdentity.first() eq &quot;&quot;&gt;&gt;
 		&lt;&lt;run $manIdentity.pushUnique(&quot;???&quot;)&gt;&gt;
 	&lt;&lt;elseif $manIdentity.last() neq &quot;???&quot;&gt;&gt;
 		&lt;&lt;run $manIdentity.delete(&quot;???&quot;)&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
-
+	
 	/*更新侧边栏*/
 	&lt;&lt;replace &quot;#story-caption&quot;&gt;&gt;&lt;&lt;include &quot;StoryCaption&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;
 	&lt;&lt;replace &quot;#江湖手册&quot;&gt;&gt;&lt;&lt;include &quot;江湖手册&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;
-  &lt;&lt;/silently&gt;&gt;&lt;&lt;/widget&gt;&gt; 
-  &lt;&lt;include &quot;Start&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="" position="225,100" size="100,100">[[人物技能|技能面板]]
+&lt;&lt;/silently&gt;&gt;&lt;&lt;/widget&gt;&gt;
+[[开始|第一章 - 初始化]]
+
+&lt;!--技能点初始化--&gt;
+&lt;&lt;set $skillPoint to 10&gt;&gt;
+&lt;&lt;set $SJMS to 0&gt;&gt;
+&lt;&lt;set $CYGS to 0&gt;&gt;
+&lt;&lt;set $TQDL to 0&gt;&gt;
+&lt;&lt;set $BXDW to 0&gt;&gt;
+
+&lt;!--技能点操作--&gt;
+&lt;&lt;nobr&gt;&gt;
+&lt;&lt;widget SJMS&gt;&gt;
+    &lt;&lt;set $SJMS++ &gt;&gt;
+    &lt;&lt;set $skillPoint-- &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#SJMS&quot;&gt;&gt;$SJMS&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+&lt;&lt;widget dSJMS&gt;&gt;
+    &lt;&lt;set $SJMS-- &gt;&gt;
+    &lt;&lt;set $skillPoint++ &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#SJMS&quot;&gt;&gt;$SJMS&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+
+&lt;&lt;widget CYGS&gt;&gt;
+    &lt;&lt;set $CYGS++ &gt;&gt;
+    &lt;&lt;set $skillPoint-- &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#CYGS&quot;&gt;&gt;$CYGS&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+&lt;&lt;widget dCYGS&gt;&gt;
+    &lt;&lt;set $CYGS-- &gt;&gt;
+    &lt;&lt;set $skillPoint++ &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#CYGS&quot;&gt;&gt;$CYGS&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+
+&lt;&lt;widget TQDL&gt;&gt;
+    &lt;&lt;set $TQDL++ &gt;&gt;
+    &lt;&lt;set $skillPoint-- &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#TQDL&quot;&gt;&gt;$TQDL&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+&lt;&lt;widget dTQDL&gt;&gt;
+    &lt;&lt;set $TQDL-- &gt;&gt;
+    &lt;&lt;set $skillPoint++ &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#TQDL&quot;&gt;&gt;$TQDL&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+
+&lt;&lt;widget BXDW&gt;&gt;
+    &lt;&lt;set $BXDW++ &gt;&gt;
+    &lt;&lt;set $skillPoint-- &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#BXDW&quot;&gt;&gt;$BXDW&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+&lt;&lt;widget dBXDW&gt;&gt;
+    &lt;&lt;set $BXDW-- &gt;&gt;
+    &lt;&lt;set $skillPoint++ &gt;&gt;
+    &lt;&lt;replace &quot;#skillPoint&quot;&gt;&gt;$skillPoint&lt;&lt;/replace&gt;&gt;
+    &lt;&lt;replace &quot;#BXDW&quot;&gt;&gt;$BXDW&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/widget&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryMenu" tags="" position="350,100" size="100,100">[[人物技能|技能面板]]
 &lt;&lt;link &#39;质问&#39;&gt;&gt;
 	&lt;&lt;append &quot;#lowCase&quot;&gt;&gt;&lt;&lt;include &quot;试探&quot;&gt;&gt;&lt;&lt;/append&gt;&gt;
 &lt;&lt;/link&gt;&gt; 
@@ -812,37 +880,36 @@ macros.cyclinglink = {
 &lt;&lt;/link&gt;&gt; 
 &lt;&lt;link &#39;坦言&#39;&gt;&gt;
 	&lt;&lt;append &quot;#lowCase&quot;&gt;&gt;&lt;&lt;include &quot;试探&quot;&gt;&gt;&lt;&lt;/append&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryCaption" tags="" position="350,100" size="100,100">姓名：$manName
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="4" name="StoryCaption" tags="" position="475,100" size="100,100">姓名：$manName
 年龄：$manAge
 身份：$manIdentity
-担忧：$manFear</tw-passagedata><tw-passagedata pid="4" name="PassageFooter" tags="" position="475,100" size="100,100">&lt;&lt;include &quot;江湖手册&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="马五爷" tags="" position="600,100" size="100,100">&lt;&lt;nobr&gt;&gt;\
+担忧：$manFear</tw-passagedata><tw-passagedata pid="5" name="PassageFooter" tags="" position="600,100" size="100,100"></tw-passagedata><tw-passagedata pid="6" name="StoryInit" tags="" position="725,100" size="100,100">&lt;&lt;script&gt;&gt;
+Template.add(&#39;trgy&#39;, function () {
+  return &quot;@@color:red;天人感应@@&quot;;
+});
+&lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="第一章 - 初始化" tags="" position="850,100" size="100,100">&lt;&lt;nobr&gt;&gt;\
 &lt;&lt;set $manName to &quot;马五爷&quot;, $manAge to &quot;???&quot;&gt;&gt;
 &lt;&lt;set $manIdentity to []&gt;&gt;&lt;&lt;run $manIdentity.push(&quot;???&quot;)&gt;&gt;
 &lt;&lt;set $manFear to []&gt;&gt;&lt;&lt;run $manFear.push(&quot;???&quot;)&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;\
-一个身穿黑色丝绸大褂的男人坐在你面前。
-测试一下~
-第二次测试~
-第三次测试~
-&lt;&lt;linkreplace &quot;继续&quot; t8n&gt;&gt;\
-察言观色：你一眼就看见了他胸前的银色十字架。
-&lt;&lt;linkreplace &quot;继续&quot; t8n&gt;&gt;\
-\&lt;&lt;if $itemCross is 1&gt;&gt;\
-和你的那枚十字架一模一样。
-\&lt;&lt;elseif $knowledge is 1&gt;&gt;\
-博学多闻：这是和洋人关系好的人才会戴的坠子，用银子造的。
-\&lt;&lt;elseif $knowledge is 2&gt;&gt;\
-博学多闻：这是信教的人的象征。他们用这种东西来证明自己的身份。
-\&lt;&lt;elseif $knowledge is 3&gt;&gt;\
-博学多闻：这是信教的人的象征。他们用这种东西来证明自己的身份。
-\&lt;&lt;else&gt;&gt;\
-博学多闻：惨了，你什么也看不出来。
-\&lt;&lt;/if&gt;&gt;
-&lt;&lt;linkreplace &quot;继续&quot; t8n&gt;&gt;
-\&lt;&lt;/linkreplace&gt;&gt;
-\&lt;&lt;/linkreplace&gt;&gt;
-\&lt;&lt;/linkreplace&gt;&gt;
-\&lt;span id=&quot;lowCase&quot;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="6" name="试探" tags="" position="725,100" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;???&quot;)&gt;&gt;
+
+&lt;script&gt;
+    Template.add([&#39;color&#39;, &#39;Color&#39;], function () {
+	var color = either(&#39;red&#39;, &#39;green&#39;, &#39;blue&#39;);
+	return this.name === &#39;Color&#39; ? color.toUpperFirst() : color;
+});
+&lt;/script&gt;
+Define a function template with two names, ?color and ?Color, whose output changes based on its name. 
+
+
+[[第一章 - 开始|CH1]]</tw-passagedata><tw-passagedata pid="8" name="CH1" tags="" position="975,100" size="100,100">?trgy - 秋天开始了。
+&lt;&lt;linkreplace &quot;嗯哼？&quot;&gt;&gt;
+    你 - 是吗？
+    &lt;&lt;linkreplace &quot;继续&quot;&gt;&gt;
+        天人感应 - 当然是，你有什么问题？你忘了你早上踩到的那个西瓜皮吗？每个人都在吃西瓜！只有你，你踩着一块西瓜皮摔到了茅房旁边，沾了一脸的屎，还半天找不到水洗干净。
+    &lt;&lt;/linkreplace&gt;&gt;
+&lt;&lt;/linkreplace&gt;&gt;
+&lt;&lt;linkreplace &quot;what?&quot;&gt;&gt;新测试&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="试探" tags="" position="1100,100" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;???&quot;)&gt;&gt;
 	你（试探） - 还要再观察一下。你什么都看不出来。
 \&lt;&lt;/if&gt;&gt;
 \&lt;&lt;if $manIdentity.includes(&quot;洋教徒&quot;) &amp;&amp; $YangJiaoTu !=1&gt;&gt;
@@ -850,12 +917,12 @@ macros.cyclinglink = {
 \&lt;&lt;/if&gt;&gt;
 \&lt;&lt;if $manIdentity.includes(&quot;买办&quot;) &amp;&amp; $MaiBan != 1&gt;&gt;
 	&lt;&lt;include [[试探【买办】]]&gt;&gt;&lt;&lt;set $MaiBan =1&gt;&gt;
-\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="试探【洋教徒】" tags="" position="850,100" size="100,100">你（试探） - “咳，”你清了清嗓子，“看样子你有时会踏足一些常人所不去的地方。”</tw-passagedata><tw-passagedata pid="8" name="试探【买办】" tags="" position="975,100" size="100,100">你（试探） - 你凑近他的面孔仔细瞧了瞧。“额有红光，看起来也不像缺钱的样子，无非赚钱要仰赖他人。有点像是……”
+\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="10" name="试探【洋教徒】" tags="" position="1225,100" size="100,100">你（试探） - “咳，”你清了清嗓子，“看样子你有时会踏足一些常人所不去的地方。”</tw-passagedata><tw-passagedata pid="11" name="试探【买办】" tags="" position="100,225" size="100,100">你（试探） - 你凑近他的面孔仔细瞧了瞧。“额有红光，看起来也不像缺钱的样子，无非赚钱要仰赖他人。有点像是……”
 马五爷 - “像是什么？”
 你 - “鹬蚌相争，渔人得利。”你坐回来，“你是那个渔人。”
 马五爷 - “这点倒是没错。”
 察言观色 - 他露出自豪的笑容。
-马五爷 - “我在东交民巷那附近做生意。”</tw-passagedata><tw-passagedata pid="9" name="买办" tags="" position="1100,100" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;买办&quot;)&gt;&gt;
+马五爷 - “我在东交民巷那附近做生意。”</tw-passagedata><tw-passagedata pid="12" name="买办" tags="" position="225,225" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;买办&quot;)&gt;&gt;
 \	&lt;&lt;link &quot;不是买办&quot;&gt;&gt;
 \		&lt;&lt;run $manIdentity.delete(&quot;买办&quot;)&gt;&gt;&lt;&lt;refresh&gt;&gt;
 \	&lt;&lt;/link&gt;&gt;
@@ -863,7 +930,7 @@ macros.cyclinglink = {
 \	&lt;&lt;link &quot;是买办&quot;&gt;&gt;
 \		&lt;&lt;run $manIdentity.pushUnique(&quot;买办&quot;)&gt;&gt;&lt;&lt;refresh&gt;&gt;
 \	&lt;&lt;/link&gt;&gt;
-\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="10" name="洋教徒" tags="" position="1225,100" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;洋教徒&quot;)&gt;&gt;
+\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="洋教徒" tags="" position="350,225" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;洋教徒&quot;)&gt;&gt;
 \	&lt;&lt;link &quot;不是洋教徒&quot;&gt;&gt;
 \		&lt;&lt;run $manIdentity.delete(&quot;洋教徒&quot;)&gt;&gt;&lt;&lt;refresh&gt;&gt;
 \	&lt;&lt;/link&gt;&gt;
@@ -871,18 +938,12 @@ macros.cyclinglink = {
 \	&lt;&lt;link &quot;是洋教徒&quot;&gt;&gt;
 \		&lt;&lt;run $manIdentity.pushUnique(&quot;洋教徒&quot;)&gt;&gt;&lt;&lt;refresh&gt;&gt;
 \	&lt;&lt;/link&gt;&gt;
-\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="技能面板" tags="" position="100,225" size="100,100">你的技能：
-　　　　　　　　　　 　通情达理
-　　　　　　　　　　　　　＾
-　　　　　　　　　　　　　＋
-　　　　　　　　　　　　　＋
-　　　　　　　　　　　　　＋
-　神机妙算＜　＋　＋　＋　ｏ　＋　＋　＋　＞察言观色
-　　　　　　　　　　　　　＋
-　　　　　　　　　　　　　＋
-　　　　　　　　　　　　　＋
-　　　　　　　　　　　　　ｖ
-　　　　　　　　　　　 博学多闻</tw-passagedata><tw-passagedata pid="12" name="江湖手册" tags="" position="225,225" size="100,100">&lt;span id=&quot;江湖手册&quot;&gt;
+\&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="技能面板" tags="" position="475,225" size="100,100">你的技能点：&lt;span id=&quot;skillPoint&quot;&gt;$skillPoint&lt;/span&gt;
+神机妙算：&lt;span id=&quot;SJMS&quot;&gt;$SJMS&lt;/span&gt; &lt;&lt;link &quot;[+]&quot;&gt;&gt;&lt;&lt;SJMS&gt;&gt;&lt;&lt;/link&gt;&gt; &lt;&lt;link &quot;[-]&quot;&gt;&gt;&lt;&lt;dSJMS&gt;&gt;&lt;&lt;/link&gt;&gt;
+察言观色：&lt;span id=&quot;CYGS&quot;&gt;$CYGS&lt;/span&gt; &lt;&lt;link &quot;[+]&quot;&gt;&gt;&lt;&lt;CYGS&gt;&gt;&lt;&lt;/link&gt;&gt; &lt;&lt;link &quot;[-]&quot;&gt;&gt;&lt;&lt;dCYGS&gt;&gt;&lt;&lt;/link&gt;&gt;
+通情达理：&lt;span id=&quot;TQDL&quot;&gt;$TQDL&lt;/span&gt; &lt;&lt;link &quot;[+]&quot;&gt;&gt;&lt;&lt;TQDL&gt;&gt;&lt;&lt;/link&gt;&gt; &lt;&lt;link &quot;[-]&quot;&gt;&gt;&lt;&lt;dTQDL&gt;&gt;&lt;&lt;/link&gt;&gt;
+博学多闻：&lt;span id=&quot;BXDW&quot;&gt;$BXDW&lt;/span&gt; &lt;&lt;link &quot;[+]&quot;&gt;&gt;&lt;&lt;BXDW&gt;&gt;&lt;&lt;/link&gt;&gt; &lt;&lt;link &quot;[-]&quot;&gt;&gt;&lt;&lt;dBXDW&gt;&gt;&lt;&lt;/link&gt;&gt;
+&lt;&lt;link &quot;返回&quot;&gt;&gt;&lt;&lt;return&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="江湖手册" tags="" position="600,225" size="100,100">&lt;span id=&quot;江湖手册&quot;&gt;
 &lt;!--正文--&gt;
 我认为他……
 *&lt;&lt;include &quot;买办&quot;&gt;&gt;
