--- a/test/LC-normal.html
+++ b/test/LC-normal.html
@@ -893,19 +893,24 @@ macros.cyclinglink = {
 
 &lt;!--对话分支按钮--&gt;
 	&lt;&lt;widget dlg&gt;&gt;
-		&lt;ol&gt;&lt;li&gt;&lt;&lt;linkreplace $args[0]&gt;&gt;
-			\&lt;&lt;replace &quot;#brc&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;/*清空选项区域内容*/
-			\&lt;&lt;append &quot;#dlg&quot;&gt;&gt;/*将选择了的选项转换为对话*/
-				\@@color:silver;?You &lt;&lt;= $args[0]&gt;&gt;@@&lt;&lt;/append&gt;&gt;
-			\&lt;&lt;append &quot;#dlg&quot; t8n&gt;&gt; /*更新链接所对应的文章内容*/
-				
+		&lt;span id=&quot;brc&quot;&gt;
+		&lt;&lt;linkreplace $args[0]&gt;&gt;
+			&lt;&lt;append &quot;#dlg&quot;&gt;&gt;/*将选择了的选项转换为对话*/
+				@@color:silver;?You &lt;&lt;= $args[0]&gt;&gt;@@&lt;&lt;/append&gt;&gt;
+			&lt;&lt;append &quot;#dlg&quot; t8n&gt;&gt; /*更新链接所对应的文章内容*/
 				&lt;&lt;include $args[1]&gt;&gt;&lt;&lt;/append&gt;&gt;
-		\&lt;&lt;/linkreplace&gt;&gt;&lt;/li&gt;&lt;/ol&gt;&lt;&lt;/widget&gt;&gt;
+		&lt;&lt;/linkreplace&gt;&gt;
+		&lt;/span&gt;
+		&lt;&lt;remove &quot;#brc&quot;&gt;&gt;&lt;&lt;/remove&gt;&gt;/*清空选项区域内容*/
+	&lt;&lt;/widget&gt;&gt;
 
 &lt;!--继续按钮--&gt;
 	&lt;&lt;widget ctn&gt;&gt;&lt;&lt;replace &quot;#brc&quot;&gt;&gt;
 			\&lt;&lt;linkreplace &quot;继续&quot;&gt;&gt;
+				\&lt;&lt;append &quot;#brc&quot;&gt;&gt;
+					&lt;&lt;include $args[0]+&quot;.brc&quot;&gt;&gt;&lt;&lt;/append&gt;&gt;
 				\&lt;&lt;append &quot;#dlg&quot; t8n&gt;&gt;
+
 					&lt;&lt;include $args[0]&gt;&gt;&lt;&lt;/append&gt;&gt;
 			\&lt;&lt;/linkreplace&gt;&gt;
 	\&lt;&lt;/replace&gt;&gt;&lt;&lt;/widget&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="Start" tags="" position="600,100" size="100,100">献给婧阳。
@@ -921,21 +926,18 @@ Template.add(&#39;pirate&#39;, function () {
 &lt;&lt;set $manFear to []&gt;&gt;&lt;&lt;run $manFear.push(&quot;???&quot;)&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;!--第一章开始--&gt;
-&lt;span id=&quot;dlg&quot;&gt; 
-    ?Shivers 你感到秋天开始了。
-&lt;/span&gt;
-&lt;span id=&quot;brc&quot;&gt;
-    &lt;&lt;include &quot;CH1.choice&quot;&gt;&gt;
-&lt;/span&gt;</tw-passagedata><tw-passagedata pid="8" name="CH1.choice" tags="" position="975,100" size="100,100">&lt;&lt;dlg &quot;是吗？&quot; &quot;俺爸爸&quot;&gt;&gt;
-&lt;&lt;dlg &quot;啊哈&quot; &quot;what&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="俺爸爸" tags="" position="1100,100" size="100,100">?Shivers 当然是，你有什么问题？你忘了你早上踩到的那个西瓜皮吗？立秋了！每个人都有西瓜吃！只有你，你踩着一块西瓜皮摔到了茅房旁边，沾了一脸的屎，还半天找不到水洗干净。
-&lt;&lt;ctn &quot;nothing&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="10" name="nothing" tags="" position="1225,100" size="100,100">It&#39;s end. 
-&lt;&lt;dlg &quot;真的吗？我不信。&quot; &quot;what&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="what" tags="" position="100,225" size="100,100">嗯哼？
-&lt;&lt;dlg &quot;你看你根本没有结束！&quot; &quot;CH1.2&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="CH1.2" tags="" position="225,225" size="100,100">确实，这是没有结束的。
-&lt;&lt;ctn &quot;好吧&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="好吧" tags="" position="350,225" size="100,100">但是，这已经结束了，我没收了你的按钮！
-&lt;&lt;ctn &quot;等等&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="等等" tags="" position="475,225" size="100,100">等等，为什么你还能继续？！
-&lt;&lt;ctn &quot;CH1.3&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="CH1.3" tags="" position="600,225" size="100,100">难道说……你用的是替身攻击？！
-&lt;&lt;ctn &quot;啊！这就是连续继续攻击吗！&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="啊！这就是连续继续攻击吗！" tags="" position="725,225" size="100,100">啊！这就是连续继续攻击吗！
-&lt;&lt;dlg &quot;马达马达！&quot; &quot;呃！！！&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="呃！！！" tags="" position="850,225" size="100,100">呃！！！</tw-passagedata><tw-passagedata pid="18" name="试探" tags="" position="975,225" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;???&quot;)&gt;&gt;
+&lt;span id=&quot;dlg&quot;&gt; ?Shivers 你感到秋天开始了。&lt;/span&gt;
+&lt;&lt;include &quot;CH1.brc&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="8" name="CH1.brc" tags="" position="975,100" size="100,100">&lt;&lt;dlg &quot;是吗？&quot; &quot;1.1&quot;&gt;&gt;
+&lt;&lt;dlg &quot;啊哈&quot; &quot;1.1&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="1.1" tags="" position="1100,100" size="100,100">?Shivers 当然是，你有什么问题？你忘了你早上踩到的那个西瓜皮吗？立秋了！每个人都有西瓜吃！只有你，你踩着一块西瓜皮摔到了茅房旁边，沾了一脸的屎，还半天找不到水洗干净。
+&lt;&lt;ctn &quot;1.2&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="10" name="1.2" tags="" position="1225,100" size="100,100">It&#39;s end. 
+&lt;&lt;dlg &quot;真的吗？我不信。&quot; &quot;1.3&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="1.3" tags="" position="100,225" size="100,100">嗯哼？
+&lt;&lt;dlg &quot;你看你根本没有结束！&quot; &quot;1.4&quot;&gt;&gt;
+&lt;&lt;dlg &quot;摩多摩多&quot; &quot;1.8&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="12" name="1.4" tags="" position="225,225" size="100,100">确实，这是没有结束的。
+&lt;&lt;ctn &quot;1.5&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="13" name="1.5" tags="" position="350,225" size="100,100">但是，这已经结束了，我没收了你的按钮！
+&lt;&lt;ctn &quot;1.6&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="1.6" tags="" position="475,225" size="100,100">等等，为什么你还能继续？！
+&lt;&lt;ctn &quot;1.7&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="15" name="1.7" tags="" position="600,225" size="100,100">难道说……你用的是替身攻击？！
+&lt;&lt;ctn &quot;1.8&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="1.8" tags="" position="725,225" size="100,100">啊！这就是连续继续攻击吗！
+&lt;&lt;dlg &quot;马达马达！&quot; &quot;1.2&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="呃！！！" tags="" position="850,225" size="100,100">呃！！！</tw-passagedata><tw-passagedata pid="18" name="试探" tags="" position="975,225" size="100,100">\&lt;&lt;if $manIdentity.includes(&quot;???&quot;)&gt;&gt;
 	你（试探） - 还要再观察一下。你什么都看不出来。
 \&lt;&lt;/if&gt;&gt;
 \&lt;&lt;if $manIdentity.includes(&quot;洋教徒&quot;) &amp;&amp; $YangJiaoTu !=1&gt;&gt;
