--- a/test/LC-normal.html
+++ b/test/LC-normal.html
@@ -932,7 +932,8 @@ Template.add(&#39;pirate&#39;, function () {
 &lt;&lt;set $manFear to []&gt;&gt;&lt;&lt;run $manFear.push(&quot;???&quot;)&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;&lt;goto &quot;1&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="8" name="1" tags="" position="975,100" size="100,100">&lt;div id=&quot;dlg&quot;&gt; ?Shivers 你感到秋天开始了。&lt;/div&gt;
-&lt;&lt;dlg &quot;是吗？&quot; &quot;1.1&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="1.1" tags="" position="1100,100" size="100,100">?Shivers 当然是，你有什么问题？你忘了你早上踩到的那个西瓜皮吗？立秋了！每个人都有西瓜吃！只有你，你踩着一块西瓜皮摔到了茅房旁边，沾了一脸的屎，还半天找不到水洗干净。
+&lt;&lt;dlg &quot;是吗？我不记得了&quot; &quot;1.1&quot;&gt;&gt;
+&lt;&lt;dlg &quot;好冷，我的身子就像冰一样。有谁在我身上泼水了吗？&quot; &quot;1.1&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="1.1" tags="" position="1100,100" size="100,100">?Shivers 当然是，你是不是有什么问题？你忘了你早上踩到的那个西瓜皮吗？立秋了！每个人都有西瓜吃！只有你，你踩着一块西瓜皮摔到了茅房旁边，沾了一脸的屎，还半天找不到水洗干净。
 &lt;&lt;ctn &quot;1.3&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="10" name="1.2" tags="" position="1225,100" size="100,100">一切都结束了！
 &lt;&lt;dlg &quot;真的吗？我不信。&quot; &quot;1.3&quot;&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="1.3" tags="" position="100,225" size="100,100">嗯哼？
 &lt;&lt;dlg &quot;你看你根本没有结束！&quot; &quot;1.4&quot;&gt;&gt;
